# NicolasSavin-AI-FOREX-SIGNAL-PLATFORM

./: .env  .env.example  .gitignore  AGENTS.md  AI_Ideas_Trader.mq4  CNAME  PRINCIPLES.md  README.md  VISION.md  main.py  pyproject.toml  render.yaml  requirements.txt  sitecustomize.py
.codex/: config.toml
app/: __init__.py  main.py  signal_aggregator.py  worker.py
backend/: __init__.py  chart_generator.py  chat_service.py  codex_connection_test.py  data_provider.py  feature_builder.py  grok_idea_service.py  market_data.py  news_provider.py  pattern_detector.py  pattern_visualization.py  portfolio_engine.py  risk_engine.py  sentiment_provider.py  signal_engine.py  signal_text_generator.py  snapshot_service.py
data/: manual_youtube_videos.json  media_catalog.json  media_sources.json  tv_sources.json  tv_videos.json
docs/: PROP_SIGNAL_ENGINE_REFACTOR_V4.md  myagent-provider.md  seat-preferences.md  teletrain-provider.md
frontend/: index.html
scripts/: codex_agent.py  resolve_youtube_channels.py
signals_data/: .gitkeep  calendar.json  heatmap.json  market_ideas.json  market_news.json  signals.json
tests/: conftest.py  test_author_intelligence.py  test_auto_archive_logic.py  test_chart_api.py  test_chat.py  test_confluence_stage27.py  test_consensus_api.py  test_consensus_engine.py  test_data_provider.py  test_decision_engine_stage29.py  test_execution_gateway_stage33.py  test_external_signal_adapter.py  test_grok_idea_service.py  test_hft_layer.py  test_idea_lifecycle_api.py  test_idea_narrative.py  test_idea_update.py  test_ideas_api.py  test_llm_config.py  (+51 more)
(+402 files in other folders)
