[project]
name = "forex-signal-platform"
version = "3.0.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi",
  "uvicorn",
  "pandas",
  "numpy",
  "yfinance",
  "requests",
  "beautifulsoup4",
  "selenium",
  "chromedriver-autoinstaller",
  "openai==1.51.2",
  "httpx==0.27.2",
  "scikit-learn",
  "ta",
  "python-dotenv"
]
